# nomeolvides

./: .gitignore  .travis.yml  AUTHORS  AUTORES  Cambios  ChangeLog  INSTALAR  INSTALL  LEAME  LEAME.md  Makefile.am  NEWS  NOVEDADES  README  README.md  autogen.sh  configure.ac  listas  nomeolvides.db  nomeolvides.sql.tablas  nomeolvidesdb
data/: Makefile.am  dialog-lista-borrar.ui  nomeolvides-beta.appdata.xml.in  nomeolvides-beta.desktop.in.in  nomeolvides.appdata.xml.in  nomeolvides.desktop  nomeolvides.desktop.in.in  nomeolvides.gresource  nomeolvides.xml
po/: POTFILES.in  POTFILES.skip  crear-potfiles  es.po
scripts/: cambiar_version  crear-potfiles  pre-commit
src/: Makefile.am  app-menu.ui  borrar-lista-dialog.ui  nomeolvides-acciones-db.vala  nomeolvides-add-coleccion-dialog.vala  nomeolvides-add-etiqueta-dialog.vala  nomeolvides-add-fuente-dialog.vala  nomeolvides-add-hecho-dialog.vala  nomeolvides-add-hecho-lista-dialog.vala  nomeolvides-add-lista-dialog.vala  nomeolvides-anios-hechos-vista.vala  nomeolvides-app-menu.ui  nomeolvides-app.vala  nomeolvides-application-window-ventana-principal.vala  nomeolvides-archivo.vala  nomeolvides-base-de-datos.vala  nomeolvides-base.vala  nomeolvides-borrar-hecho-dialogo.vala  nomeolvides-borrar-hecho-lista-dialog.vala  nomeolvides-boton.vala  nomeolvides-box-anios-hechos-vista.vala  nomeolvides-box-colecciones-config.vala  nomeolvides-box-descripcion-hecho.vala  nomeolvides-box-etiquetas-config.vala  nomeolvides-box-headerbar.vala  nomeolvides-box-listas-config.vala  nomeolvides-box-toolbar.vala  nomeolvides-box-vista-hecho.vala  nomeolvides-button-nmo-button.vala  nomeolvides-button-nmobutton.vala  nomeolvides-coleccion.vala  nomeolvides-colecciones-preferencias.vala  nomeolvides-configuracion.vala  nomeolvides-datos.vala  nomeolvides-db.vala  nomeolvides-deshacer-item.vala  nomeolvides-deshacer.vala  nomeolvides-dialog-archivo-abrir.vala  nomeolvides-dialog-archivo-guardar.vala  nomeolvides-dialog-base-borrar.vala  (+109 more)
